import "common.event_header.proto";

package chameleon;

// tokenized events for errors generated by the universal consumer

message events
{
     required common.event_header   header                      =  1;
     optional int32                 error_number                =  9;
     optional string                error_string                = 10;
     optional int32                 file_line_number            = 11;
     optional int32                 file_column_number          = 12;
     optional string                file_name                   = 13;
     optional string                publication_column          = 20;
     optional string                publication_column_full_name = 21;
     optional string                publication_name            = 22;
     optional int32                 proto_data_type             = 23;
     optional string                publication_column2         = 24;
     optional string                routing_key                 = 30;
     optional string                repository_column           = 40;
     optional string                repository_table            = 41;
     optional string                sql_error_text              = 50;
     optional int32                 sql_code                    = 51;
     optional int32                 sq_fs_error_number          = 60;
     optional string                node_name                   = 70;
     optional int32                 node_id                     = 71;
     optional string                process_name                = 80;
     optional int32                 process_id                  = 81;
}
