import "common.info_header.proto";

package common;

//!!BLOCK:HEADER = BEGIN
//!!BLOCK:PUBLICATION DESCRIPTION = BEGIN
//
//  event_header 
//
//  This is the standard header that we use for all event messages when using the
//  Google protocol buffers serialization method.
//
//!!BLOCK:PUBLICATION DESCRIPTION = END
//!!BLOCK:HEADER = END

message event_header
{
     //!!BLOCK:FIELD DISCRIPTION: common information header
     //!!SQL: INCLUDE
     required info_header          header         = 1;

     //!!BLOCK:FIELD DISCRIPTION = BEGIN
     // unique event id, see seaquest/export/include/common/evl_sqlog_eventnum.h
     //!!BLOCK:FIELD DISCRIPTION = END
     //!!SQL: INCLUDE
     required int32                event_id       = 2;

     //!!BLOCK:FIELD DISCRIPTION = BEGIN
     // see SQ_LOG* defines in seaquest/export/include/sqevlog/evl_sqlog_writer.h
     //!!BLOCK:FIELD DISCRIPTION = END
     //!!SQL: INCLUDE
     //!!SQL: COLUMN NAME = severity
     required int32                event_severity = 3;
}
