import "common.event_header.proto";
import "common.qpid_header.proto";

package common;

//
//  text_event 
//
//  This message is used for the text representation of events. The text
//  representation is created by the event consumer, from tokenized events
//  generated by subsystems. In the short term, some subsystems will 
//  generate text events directly, but longer term they will all switch
//  to a tokenized format.
//

message text_event
{
     required event_header  header         = 1;         // common header for all event messages
     required string        text           = 2;         // the text string for the event

     // the next field is populated by the UNC when it republishes an
     // event in text form; this field is absent for subsystems that 
     // publish text events directly

     optional string        tokenized_event_repos_table = 10;  // name of repos table holding tokenized event info
}
