import "common.event_header.proto";

package sql;

message info_event
{
    required common.event_header header          = 1;  // common header for all event messages
    optional  string               query_id = 2; // query id if available
    optional string               message_text = 3; // error message text
   
    optional string               experience_level = 4;// BEGINNER/ADVANCED
    optional string               target = 5;//DIALOT?LOGONLY/DBA
    optional string               file_name = 6; // file name that raised the event
    optional int32                line_number = 7; // line number in file which logged the event
    optional int32                explain_seq_num = 8; // exlain node number from explain plan
   
    optional int32                error1 = 9; //error number
    optional int32                error2 = 10; //error detail level 2
    optional int32                error3 = 11 ; // error detail level 3
    optional int32                int0 = 12; // optional interger params 
    optional int32                int1 = 13;
    optional int32                int2 = 14;
    optional int32                int3 = 15;
    optional int32                int4 = 16;
    optional string               string0 = 17; // optional string params
    optional string               string1 = 18;
    optional string               string2 = 19;
    optional string               string3 = 20;
    optional string               string4 = 21;
    optional int64                int64_0 = 22;
    optional int64                int64_1 = 23;
    optional int64                int64_2 = 24;
 
}
